# convo-state-machine

./: .env.example  .gitignore  CLAUDE.md  langgraph.json  pyproject.toml
docs/plans/: 2026-03-09-edge-cases-design.md  2026-03-09-edge-cases-plan.md
src/tara/: config.py  main.py
src/tara/agents/: CLAUDE.md  __init__.py
src/tara/agents/bucket_x/: __init__.py  graph.py  nodes.py  prompts.py
src/tara/agents/npa/: __init__.py  graph.py  prompts.py
src/tara/agents/pre_due/: __init__.py  graph.py  nodes.py  prompts.py
src/tara/data/: borrowers.json  mock_borrowers.py  mock_history.py  mock_payments.py  negotiation_history.json
src/tara/graph/: builder.py
src/tara/llm/: CLAUDE.md  prompts.py  provider.py
src/tara/nodes/: CLAUDE.md  central_intelligence.py  end_call.py  escalate.py  handle_objection.py  identify_borrower.py  load_context.py  present_options.py  state_purpose.py  validate_commitment.py
src/tara/state/: CLAUDE.md  schema.py
src/tara/tools/: analysis.py  borrower.py  payment.py
src/tara/voice/: CLAUDE.md  __init__.py  normalize.py  stt.py  tts.py
src/tara/web/: CLAUDE.md  app.py  routes.py  session.py
src/tara/web/static/: index.html
